<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auction</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_add_bid">Add Bid</string>
    <string name="str_show_all_bids">Show All Bids</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_password_mismatch">Password mismatch</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_display_name">Display Name</string>
    <string name="str_havent_account">Don\'t have an account yet?</string>
    <string name="str_started_auctions">Started Auctions</string>
    <string name="str_upcoming_auctions">Upcoming Auctions</string>
    <string name="str_already_signed">Already Signed Up?</string>
    <string name="str_exit_title">"Leave the Page"</string>
    <string name="str_are_you_sure">Are you sure?</string>
    <string name="str_confirm">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_closed">Closed</string>
    <string name="str_not_started_yet">Not Started Yet</string>
    <string name="str_winner">Winner</string>
    <string name="str_item_title">Item Title :</string>
    <string name="str_item_description">Item Description :</string>
    <string name="str_item_owner">Item Owner :</string>
    <string name="str_start_date">Start Date :</string>
    <string name="str_start_date_tap">Start Date :(Tap to change)</string>
    <string name="str_logged_In_successfully">Logged in successfully</string>
    <string name="str_invalid_account">Invalid account</string>
    <string name="str_invalid_value">Invalid value</string>
    <string name="error_sign_up_failed">An error occured during sign up process</string>
    <string name="str_welcome">Welcome </string>
    <string name="str_save">Save</string>
    <string name="str_add_auction">New Auction</string>
    <string name="str_added_successfully">Added Successfully</string>
    <string name="str_auction_added_failure">An error occured during adding operation</string>
    <string name="str_loading">Loading...</string>
    <string name="str_owner">Owner</string>
    <string name="str_auction_bids">Auction Bids ($):</string>
    <string name="str_add_dolar_bid_value"> Bid Value ($):</string>
    <string name="str_bid_value">Bid Value ($):</string>
    <string name="str_users_count">Users Count</string>
    <string name="str_we_have">We Have :</string>
    <string name="str_auctions_count">Auctions Count </string>
    <string name="str_bids_count">Bids Count</string>
    <string name="str_no_auctions">No Auctions</string>
    <string name="str_no_up_coming_auctions">No Upcoming Auctions</string>
    <string name="str_no_started_auctions">No started Auctions</string>
    <string name="str_logout">Logout</string>
    <string name="str_auction_not_started">Auction not started yet</string>
    <string name="str_auction_is_closed">Auction is closed</string>
    <string name="str_passed_date">Cannot select passed Date</string>
    <string name="str_bids_added_randomly">Other users bids has been added randomly</string>
    <!-- Start Month Names -->
    <string name="str_jan">January</string>
    <string name="str_feb">Febrauary</string>
    <string name="str_mar">March</string>
    <string name="str_april">April</string>
    <string name="str_may">May</string>
    <string name="str_june">June</string>
    <string name="str_july">July</string>
    <string name="str_aug">August</string>
    <string name="str_sep">September</string>
    <string name="str_oct">October</string>
    <string name="str_nov">November</string>
    <string name="str_dec">December</string>
    <!-- Nav Drawer Titles -->
    <string-array name="nav_drawer_items">

        <!-- Nav Drawer Menu Items -->
        <item>"Auctions"</item>
        <!-- Nav Drawer Menu Items -->
        <item>Statistics</item>
        <!-- Nav Drawer Menu Items -->
        <item>Profile</item>
        <!-- Nav Drawer Menu Items -->
        <item>Logout</item>
    </string-array>
    <!-- END NAVDRAWER TITLES -->
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/auction_icon</item>
        <item>@drawable/stat_icon</item>
        <item>@drawable/profile</item>
        <item>@drawable/logout</item>
    </array>
    <!-- End Month Names -->
    <!-- EVENTS SWIPE TITLES -->
    <string-array name="events_swipe_titles">

        <!-- Nav Drawer Menu Items -->
        <item>"All"</item>
        <item>Won Auctions</item>
        <item>My Auctions</item>
    </string-array>
    <!-- END EVENTS SWIPE TITLES -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registeration">Sign up</string>
    <string name="error_required_field">Required</string>
    <string name="title_activity_add_auction">AddAuctionActivity</string>
    <string name="title_activity_auction_details">AuctionDetailsActivity</string>

</resources>