<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etFirstName_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_first_name"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15dp" >
        </EditText>

        <EditText
            android:id="@+id/etLastName_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_last_name"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15dp" >
        </EditText>

        <EditText
            android:id="@+id/etDisplayName_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_display_name"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15dp" >
        </EditText>

        <EditText
            android:id="@+id/etPassword_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15dp" >
        </EditText>

        <EditText
            android:id="@+id/etConfirmPassword_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_confirm_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="15dp" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lltop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_green_rounded_rectangle"
        android:onClick="signUp"
        android:text="@string/str_sign_up"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/llSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/str_already_signed" />

        <TextView
            android:id="@+id/tvSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="signin"
            android:paddingLeft="2dp"
            android:text="@string/str_sign_in"
            android:textColor="#266033"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>