<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.495" >

        <TextView
            android:id="@+id/tvStartedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:text="@string/str_started_auctions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tvStartedLabel"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/lvStartedAuctionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginTop="5dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="2dp" >
        </ListView>

        <TextView
            android:id="@+id/tvNoStartedAuctions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_no_started_auctions"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.495" >

        <TextView
            android:id="@+id/tvUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:text="@string/str_upcoming_auctions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tvUpcoming"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/lvUpComingAuctionsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view2"
            android:layout_marginTop="5dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="2dp" >
        </ListView>

        <TextView
            android:id="@+id/tvNoUpComingAuctions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_no_up_coming_auctions"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</LinearLayout>